补充虚拟机参数